test/preprocessor/pass/define.osl
#define DECL(x, y) x(int y)

int DECL(foo, ret) { return ret; }
