test/preprocessor/fail/unterminated_macro_args.osl
#define MACRO(x) x
MACRO(
